# epson-inkjet-printer

./: .gitignore  Makefile.am  configure.ac
201207w/: Manual.txt  README
201207w/lib/: libEpson_201207w.MT.so.1.0.0  libEpson_201207w.so.1.0.0
201207w/lib64/: libEpson_201207w.MT.so.1.0.0  libEpson_201207w.so.1.0.0
201207w/ppds/: EPSON_L110.ppd  EPSON_L210.ppd  EPSON_L300.ppd  EPSON_L350.ppd  EPSON_L355.ppd  EPSON_L550.ppd  EPSON_L555.ppd
201207w/resource/: Epson_201207w.1.data
201215w/: Manual.txt  README
201215w/include/: epmcdef.h
201215w/lib/: libEpson_201215w.MT.so.1.0.0  libEpson_201215w.so.1.0.0
201215w/lib64/: libEpson_201215w.MT.so.1.0.0  libEpson_201215w.so.1.0.0
201215w/ppds/: EPSON_M100.ppd  EPSON_M105.ppd  EPSON_M200.ppd  EPSON_M205.ppd
201215w/resource/: Epson_201215w.1.data
201301w/: Manual.txt  README
201301w/lib/: libEpson_201301w.MT.so.1.0.0  libEpson_201301w.so.1.0.0
201301w/lib64/: libEpson_201301w.MT.so.1.0.0  libEpson_201301w.so.1.0.0
201310w/: Manual.txt  README
201601w/: README
debian/: changelog  control  copyright  epson-inkjet-printer-201401w.docs  epson-inkjet-printer-201401w.install  epson-inkjet-printer-filter.docs  epson-inkjet-printer-filter.install  epson-inkjet-printer-filter.links  epson-inkjet-printer-l100l200.docs  epson-inkjet-printer-l100l200.install  epson-inkjet-printer.docs.in  epson-inkjet-printer.install.in  postinst  rules
l100l200/: Manual.txt  README
ld.so.conf.d/: 99-epson-inkjet-printer.conf  Makefile.am
src/: Makefile.am  debuglog.h  err.c  err.h  main.c  raster_to_epson.c
(+46 files in other folders)
